[metadata]
version = 1.26.1
name = tempest-nfv-plugin
summary = Tempest plugin for testing NFV
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Other Audience
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Red Hat NFV QE team
author-email = nfv-cloud-qe-team@redhat.com

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    nfv_tempest_plugin

[entry_points]
tempest.test_plugins = nfv_tempest_plugin = nfv_tempest_plugin.plugin:NfvTempestPlugin

[pbr]
warnerrors = true

[build_sphinx]
builders = man
source-dir = doc/
build-dir = doc/build
all-files = 1
